// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<Fragment>
  <h2
    className="settings-sub-category-name"
    id="languages-category-title"
  >
    property.category.languages
  </h2>
  <div
    data-test="language-select"
  >
    <Select
      aria-labelledby="languages-category-title"
      className="input-large select-settings-language"
      onChange={[Function]}
      options={
        Array [
          Object {
            "label": "property.category.Java",
            "originalValue": "Java",
            "value": "java",
          },
          Object {
            "label": "property.category.JavaScript",
            "originalValue": "JavaScript",
            "value": "javascript",
          },
          Object {
            "label": "property.category.COBOL",
            "originalValue": "COBOL",
            "value": "cobol",
          },
        ]
      }
      placeholder="settings.languages.select_a_language_placeholder"
      value={
        Object {
          "label": "property.category.Java",
          "originalValue": "Java",
          "value": "java",
        }
      }
    />
  </div>
  <div
    className="settings-sub-category"
  >
    <CategoryDefinitionsList
      category="java"
      definitions={Array []}
    />
  </div>
</Fragment>
`;

exports[`should render correctly with an unknow language 1`] = `
<Fragment>
  <h2
    className="settings-sub-category-name"
    id="languages-category-title"
  >
    property.category.languages
  </h2>
  <div
    data-test="language-select"
  >
    <Select
      aria-labelledby="languages-category-title"
      className="input-large select-settings-language"
      onChange={[Function]}
      options={
        Array [
          Object {
            "label": "property.category.Java",
            "originalValue": "Java",
            "value": "java",
          },
          Object {
            "label": "property.category.JavaScript",
            "originalValue": "JavaScript",
            "value": "javascript",
          },
          Object {
            "label": "property.category.COBOL",
            "originalValue": "COBOL",
            "value": "cobol",
          },
        ]
      }
      placeholder="settings.languages.select_a_language_placeholder"
    />
  </div>
</Fragment>
`;
